tests/errors/generic_union_duplicate_param.dang
# Generic union with duplicate type parameters

type Lft[a] {
  pub value: a
}

union Bad[a, a] = Lft[a]
